# open_lm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AVERAGE.md  LICENSE  MANIFEST.in  MOE.md  Makefile  MoE.md  README.md  environment-tests.yml  environment.yml  pyproject.toml  requirements.txt  requirements_test.txt  setup.py  test_train.py
datapreprocess/: make_2048.py  make_assistant_data.py  make_vq.py  vq_test.sh  wiki_download.py
eval/: README.md  eval_7b_sample.sh  eval_openlm_ckpt.py  eval_openlm_ckpt_helm.py  full_eval.yaml  gather_performance.py  in_memory_hf_eval.yaml  wrap_checkpoint_for_hf.py
eval_vqgpt/: val.sh
open_lm/: activations.py  attention.py  data.py  distributed.py  evaluate.py  file_utils.py  logger.py  losses.py  main.py  meters.py  mixture_of_experts.py  model.py  moe_checkpoint_utils.py  moe_layer.py  norms.py  params.py  pdb.py  precision.py  rotary.py  run_bench.sh  scheduler.py  train.py
open_lm_hf/: configuration_openlm.py  modeling_openlm.py  tokenization_openlm.py
plots/: interpolation.py
sagemaker/: .dockerignore  Dockerfile  cfg_sample.yaml  launch_sagemaker_train.py
sagemaker_train/: Dockerfile  Dockerfile.p5  Dockerfile.trn1  Dockerfile_update  cfg_sample.yaml  launch_sagemaker_train.py  sm_utils.py  update.dockerfile
scripts/: copy_results.py  download_results.sh  generate.py  generate_without_hf.py  lm_eval.sh  plot_txt_vlm.py  slurm_one_node.sh  synchronize_text_results.sh  train_example.sh  wrap_checkpoint_for_hf.py
tests/: benchmark_160m.sh  setup_tests.py  shared.py  test_attention_masking.py  utils.py  (+32 more)
(+101 files in other folders)
