[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open_lm"
dynamic = ["version", "description", "readme", "license", "authors", "classifiers", "dependencies"]

[tool.setuptools]
py-modules = []

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow",
    "gpu: marks tests as requiring gpus",
    "s3: marks tests as requiring s3 creds",
]